more spot filter params
